Correct the overflow behaviour

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,6 +48,10 @@ a {
   padding: 0;
 }
 
+.overflow {
+  overflow-y: scroll;
+}
+
 header {
   height: 3em;
   text-align: center;
